added fridges route and some bootstrap

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -6,16 +6,39 @@
       <a class="navbar-brand " href="/logout">
         Logout
       </a>
+      <button id="logoutBtn" type="button" class="btn btn-primary">Primary</button>
     </div>
   </div>
 </nav>
-
+  <!--Wrapper-->
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-3 bg-danger">
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
+
     </div>
+
+
+      <div class="row">
+
+        <div class="col-md-6 m col-md-offset-3 bg-info">
+
+          <h2>Logo</h2>
+
+        </div>
+
+        <div class="col-md-3 col-md-offset-6">
+        <h2>Fridge</h2>
+      </div>
+
+      </div>
+
+      
+    
+  
+  <!--End Wrapper-->
   </div>
+
 
   <script type="text/javascript" src="./assets/js/members.js"></script>
