--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -14,22 +14,22 @@
         <form class="signup">
           <!--name-->
           <div class="form-group">
-            <label for="exampleInputName">User Name</label>
+            <label for="InputName">User Name</label>
             <input type="text" class="form-control" id="username-input" placeholder="User Name">
           </div>
           <!--fridge-->
           <div class="form-group">
-            <label for="exampleInputFridgeName">Fridge Name</label>
+            <label for="InputFridgeName">Fridge Name</label>
             <input type="text" class="form-control" id="fridgeName-input" placeholder="Fridge Name">
           </div>
           <!--email-->
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="InputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <!--Password-->
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="InputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <!---->
