--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,8 @@
   <!--NavBar-->
   <nav class="navbar navbar-default">
+    <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
@@ -45,4 +48,5 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="./assets/js/signup.js"></script>
+  <script type="text/javascript" src="/assets/js/signup.js"></script>
+  
