--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,19 @@
 <!--Login Page-->
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+  <div class="container-fluid">
+    <!--Logout Btn -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/logout">
+        Fridge Buddy
+      </a>
+      
     </div>
-  </nav>
+  </div>
+</nav>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
+        <h2>Login</h2>
         <form class="login">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
