--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <title>Smart Fridge</title>
+    <title>Fridge Buddy</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link  type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
     <link type="text/css" href="/assets/stylesheets/style.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
-	<body>
+	<body class="bg-dark">
+        <div class="container wrapper">
 		{{{ body }}}
+        <footer class="bg-dark"><p>Fridge Buddy 2019 &copy;</p></footer>
+        </div>
+        
 	</body>
 </html>
+
+
+
