--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,44 +1,96 @@
-<!--NavBar-->
+
+  <!--Wrapper-->
+    <div class="fc ">
+    <header class ="border border-dark border-top-0 border-left-0 border-right-0 text-white ">
+      <!--NavBar-->
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!--Logout Btn -->
     <div class="navbar-header">
-      <a class="navbar-brand " href="/logout">
+      <a class="navbar-brand" href="/logout">
         Logout
       </a>
-      <button id="logoutBtn" type="button" class="btn btn-primary">Primary</button>
+      
     </div>
   </div>
 </nav>
-  <!--Wrapper-->
-  <div class="container">
+        
+    </header>
+    <!-- Aside Text-->
+    <aside class="ml-0 p-0 member-name"> 
+      <!-- SVG image -->
+      <h1 class="member-name">Hello User</h1>
+      <h2>Your fridge Name, is running low on the following items:</h2>
+      <ul>
+        <li><h3>Eggs</h3></li>
+        <li><h3>Milk</h3></li>
+        <li><h3>Apple Juice</h3></li>
+      </ul>
+
+    </aside>
+    <!-- Aside -->
+    <aside class="ml-0 p-0 "> 
+      <!-- SVG image -->
+      <img src="/assets/img/logo.svg" alt="fridge graphic">
+    </aside>
+    <!-- Section -->
+    <section class="">
+      <!--add items-->
+          <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 bg-danger">
-        <h2>Welcome <span class="member-name"></span></h2>
+      <div class="col-md-4 ">
+        <h2>Add Items</h2>
+        <form class="add-item">
+          <div class="form-group">
+            <label for="InputItemName">Item Name</label>
+            <input type="text" class="form-control" id="itemName-input" placeholder="Item Name.">
+          </div>
+          <div class="form-group">
+            <label for="InputItemDescription">Description</label>
+            <textarea class="form-control" aria-label="With textarea" id="itemDescription-input" placeholder="Description"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="InputQt">Quantity</label>
+            <input type="number" class="form-control" id="itemQt-input" placeholder="0">
+          </div>
+          <button type="submit" class="btn btn-default" >ADD</button>
+        </form>
+       
+        <br />
+        
+        
       </div>
-
     </div>
+  </div>
+        
+  </section>
+   <main class="bg-secondary"> 
+      <h1>Fridge <span class="fridgeName"></span> contents</h1>
+
+<h3>item</h3>
+<ul>
+        <li><h3>Eggs 4</h3></li>
+        <li><h3>Milk 3 Cups</h3></li>
+        <li><h3>Apple Juice 1 Quart</h3></li>
+      </ul>
 
 
-      <div class="row">
-
-        <div class="col-md-6 m col-md-offset-3 bg-info">
-
-          <h2>Logo</h2>
-
-        </div>
-
-        <div class="col-md-3 col-md-offset-6">
-        <h2>Fridge</h2>
-      </div>
-
-      </div>
-
-      
-    
+<ul>
+  {{#each tasks}}
+  	<li>
+  	   <p>Item: {{this.itemName}}</p>
+       <p>Description: {{this.itemDescription}}</p>
+       <p>Qt: {{this.itemQt}}</p>
+  	</li>
+  {{/each}}
+</ul>
+    </main>
   
-  <!--End Wrapper-->
+  
+     
+  
+  
   </div>
 
-
-  <script type="text/javascript" src="./assets/js/members.js"></script>
+  
+  <script type="text/javascript" src="/assets/js/members.js"></script>
