--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,18 +1,24 @@
   <!--NavBar-->
   <nav class="navbar navbar-default">
-    <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+  <div class="container-fluid">
+    <!--Logout Btn -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/logout">
+        Fridge Buddy
+      </a>
+      
     </div>
-  <!---->
-  </nav>
-  <div class="container">
-    <div class="row">
+  </div>
+</nav>
+  <!--
+  <aside> 
+      
+      <img src="/assets/img/logo.svg" alt="fridge graphic">
+    </aside> -->
+    <section > 
+      <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h2>Create an account</h2>
         <!--Form-->
         <form class="signup">
           <!--name-->
@@ -46,7 +52,9 @@
         <p>Or log in <a href="/">here</a></p>
       </div>
     </div>
-  </div>
-
+    </section>
+    
+    
+  
   <script type="text/javascript" src="/assets/js/signup.js"></script>
   
