created items api.routes and some jquery to members page

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -66,6 +66,7 @@
   </section>
    <main class="bg-secondary"> 
       <h1>Fridge <span class="fridgeName"></span> contents</h1>
+      <div id="itemList"></div>
 
 <h3>item</h3>
 <ul>
