trying to figure the jquery problem

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <title>Fridge Buddy</title>
+    <title>{{title}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link  type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -11,6 +11,7 @@
 	</head>
 	<body class="bg-dark">
         <div class="container wrapper">
+            
 		{{{ body }}}
         <footer class="bg-dark"><p>Fridge Buddy 2019 &copy;</p></footer>
         </div>
