--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,4 +1,4 @@
-
+<script type="text/javascript" src="./assets/js/members.js"></script>
   <!--Wrapper-->
     <div class="fc ">
     <header class ="border border-dark border-top-0 border-left-0 border-right-0 text-white ">
@@ -19,12 +19,10 @@
     <!-- Aside Text-->
     <aside class="ml-0 p-0 member-name"> 
       <!-- SVG image -->
-      <h1 class="member-name">Hello User</h1>
-      <h2>Your fridge Name, is running low on the following items:</h2>
-      <ul>
-        <li><h3>Eggs</h3></li>
-        <li><h3>Milk</h3></li>
-        <li><h3>Apple Juice</h3></li>
+      <h1>Hello <span class="username"></span></h1>
+      <h2>Your fridge <span class="fridgeName"></span>, is running low on the following items:</h2>
+      <ul id="fridgeContents">
+        
       </ul>
 
     </aside>
@@ -53,7 +51,7 @@
             <label for="InputQt">Quantity</label>
             <input type="number" class="form-control" id="itemQt-input" placeholder="0">
           </div>
-          <button type="submit" class="btn btn-default" >ADD</button>
+          <button type="submit" class="btn-lg btn-primary" >ADD</button>
         </form>
        
         <br />
@@ -66,24 +64,11 @@
   </section>
    <main class="bg-secondary"> 
       <h1>Fridge <span class="fridgeName"></span> contents</h1>
-      <div id="itemList"></div>
+      <span class="itemInTheFridge"></span>
 
 <h3>item</h3>
-<ul>
-        <li><h3>Eggs 4</h3></li>
-        <li><h3>Milk 3 Cups</h3></li>
-        <li><h3>Apple Juice 1 Quart</h3></li>
-      </ul>
-
-
-<ul>
-  {{#each tasks}}
-  	<li>
-  	   <p>Item: {{this.itemName}}</p>
-       <p>Description: {{this.itemDescription}}</p>
-       <p>Qt: {{this.itemQt}}</p>
-  	</li>
-  {{/each}}
+<ul id="itemInTheFridge">
+ 
 </ul>
     </main>
   
@@ -94,4 +79,4 @@
   </div>
 
   
-  <script type="text/javascript" src="/assets/js/members.js"></script>
+  
