few changes to routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
     <link type="text/css" href="/assets/stylesheets/style.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
-	<body class="bg-dark">
+	<body class="">
         <div class="container wrapper">
             
 		{{{ body }}}
-        <footer class="bg-dark"><p>Fridge Buddy 2019 &copy;</p></footer>
+        
         </div>
         
 	</body>
