--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,21 @@
 <!--Login Page-->
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!--Logout Btn -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Fridge Buddy
-      </a>
-      
-    </div>
-  </div>
-</nav>
+<div class="fc ">
+  <header class="border border-dark border-top-0 border-left-0 border-right-0 text-white ">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!--Logout Btn -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/logout">
+            Fridge Buddy
+          </a>
+
+        </div>
+      </div>
+    </nav>
+  </header>
+
   <div class="container">
-    <div class="row">
+    <div class="row ">
       <div class="col-md-6 col-md-offset-3">
         <h2>Login</h2>
         <form class="login">
@@ -31,5 +35,8 @@
     </div>
   </div>
 
-  
-  <script type="text/javascript" src="./assets/js/login.js"></script>
+  <footer class="bg-dark">
+    <p>Fridge Buddy 2019 &copy;</p>
+  </footer>
+</div>
+<script type="text/javascript" src="./assets/js/login.js"></script>
