--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,82 +1,103 @@
-<script type="text/javascript" src="./assets/js/members.js"></script>
-  <!--Wrapper-->
-    <div class="fc ">
-    <header class ="border border-dark border-top-0 border-left-0 border-right-0 text-white ">
-      <!--NavBar-->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!--Logout Btn -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-      
-    </div>
-  </div>
-</nav>
-        
-    </header>
-    <!-- Aside Text-->
-    <aside class="ml-0 p-0 member-name"> 
-      <!-- SVG image -->
-      <h1>Hello <span class="username"></span></h1>
-      <h2>Your fridge <span class="fridgeName"></span>, is running low on the following items:</h2>
-      <ul id="fridgeContents">
-        
-      </ul>
+<script type="text/javascript" src="/assets/js/members.js"></script>
+<!--Wrapper-->
+<div class="fc ">
+  <header class="border border-dark border-top-0 border-left-0 border-right-0 text-white ">
+    <!--NavBar-->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!--Logout Btn -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/logout">
+            Logout
+          </a>
 
-    </aside>
-    <!-- Aside -->
-    <aside class="ml-0 p-0 "> 
-      <!-- SVG image -->
-      <img src="/assets/img/logo.svg" alt="fridge graphic">
-    </aside>
-    <!-- Section -->
-    <section class="">
-      <!--add items-->
-          <div class="container">
-    <div class="row">
-      <div class="col-md-4 ">
-        <h2>Add Items</h2>
-        <form class="add-item">
-          <div class="form-group">
-            <label for="InputItemName">Item Name</label>
-            <input type="text" class="form-control" id="itemName-input" placeholder="Item Name.">
-          </div>
-          <div class="form-group">
-            <label for="InputItemDescription">Description</label>
-            <textarea class="form-control" aria-label="With textarea" id="itemDescription-input" placeholder="Description"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="InputQt">Quantity</label>
-            <input type="number" class="form-control" id="itemQt-input" placeholder="0">
-          </div>
-          <button type="submit" class="btn-lg btn-primary" >ADD</button>
-        </form>
-       
-        <br />
-        
-        
+        </div>
+      </div>
+    </nav>
+
+  </header>
+  <!-- Aside Text-->
+  <aside class="ml-0 p-0 member-name">
+    <!-- SVG image -->
+    <h1>Hello <span class="username"></span></h1>
+    <h2>Your fridge <span class="fridgeName"></span>, is running low on the following items:</h2>
+    <ul id="fridgeContents">
+
+    </ul>
+
+  </aside>
+  <!-- Aside -->
+  <aside class="ml-0 p-0 ">
+    <!-- SVG image -->
+    <img src="/assets/img/logo.svg" alt="fridge graphic">
+  </aside>
+  <!-- Section -->
+  <section class="">
+    <!--add items-->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 ">
+          <h2>Add Items</h2>
+          <form class="add-item">
+            <div class="form-group">
+              <label for="InputItemName">Item Name</label>
+              <input type="text" class="form-control" id="itemName-input" placeholder="Item Name.">
+            </div>
+            <div class="form-group">
+              <label for="InputItemDescription">Description</label>
+              <textarea class="form-control" aria-label="With textarea" id="itemDescription-input"
+                placeholder="Description"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="InputQt">Quantity</label>
+              <input type="number" class="form-control" id="itemQt-input" placeholder="0">
+            </div>
+            <button type="submit" class="btn-lg btn-primary">ADD</button>
+          </form>
+
+          <br />
+
+
+        </div>
       </div>
     </div>
-  </div>
-        
+
   </section>
-   <main class="bg-secondary"> 
-      <h1>Fridge <span class="fridgeName"></span> contents</h1>
-      <span class="itemInTheFridge"></span>
+  <main class="bg-secondary">
+    <div class="container">
+      <h2>Items In your Fridge named: <span class="fridgeName"></span></h2>
 
-<h3>item</h3>
-<ul id="itemInTheFridge">
- 
-</ul>
-    </main>
-  
-  
-     
-  
-  
-  </div>
+      <table class="table table-striped">
+        <thead>
+          <tr class="">
+            <th class="text-center">
+              <h3>Item Name:</h3>
+            </th>
+            <th class="text-center">
+              <h3>Item Descriptions:</h3>
+            </th>
+            <th class="text-center">
+              <h3>Item Qt</h3>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each items}}
+          <tr>
+            <td>{{itemName}}</td>
+            <td>{{itemDescription}}</td>
+            <td>{{itemQt}}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </main>
 
-  
-  
+
+
+
+  <footer class="bg-dark">
+    <p>Fridge Buddy 2019 &copy;</p>
+  </footer>
+</div>
